# NuPogody-API

./: .gitignore  README.md  game.py  pyproject.toml
.github/workflows/: ci.yml
nupogodi/: __init__.py  core.py  dashboard.html  dashboard.py  env.py  record.py  recorder.py  renderer.py  rollout.py  train.py  types.py
nupogodi/agents/: __init__.py  base.py  cl1_agent.py  random_agent.py
nupogodi/cl1/: __init__.py  _compat.py  api.py  dish.py  hardware.py
nupogodi/clients/: __init__.py  human.py
nupogodi/transport/: __init__.py  ws_server.py
tests/: conftest.py  test_agents_transport.py  test_cl1_agent.py  test_cl1_api.py  test_core.py  test_dashboard.py  test_determinism.py  test_env.py  test_renderer.py  test_rollout_recorder.py
