[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nupogodi"
version = "0.1.0"
description = "Headless, deterministic 'Ну, погоди!' egg-catcher environment with a Gymnasium interface and swappable agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "loguru>=0.7",
    "rich>=13",
]

[project.optional-dependencies]
render = ["pygame>=2.5"]
# The learning spiking backend. BindsNET (its MSTDPET rule = reward-modulated
# STDP) is the substrate; a tiny torch._six shim (nupogodi/cl1/_compat.py) keeps
# it working on modern PyTorch. `cl` targets real CL1 hardware / the official sim.
snn = ["bindsnet", "torch>=2.2"]
cl = ["cl-sdk"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pygame>=2.5",
]

[project.scripts]
nupogodi-human = "nupogodi.clients.human:main"
nupogodi-random = "nupogodi.agents.random_agent:main"
nupogodi-record = "nupogodi.record:main"
nupogodi-dashboard = "nupogodi.dashboard:main"
nupogodi-train = "nupogodi.train:main"

[tool.setuptools.packages.find]
include = ["nupogodi*"]

[tool.setuptools.package-data]
nupogodi = ["*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"
# Legacy pre-refactor monolith and the upstream originals are kept for
# reference but are not held to the new lint rules.
extend-exclude = ["game.py", "old_sources"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
